--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jest": "^26.0.1",
     "jshint": "^2.9.3",
     "nan": "^2.16.0",
+    "poker-odds": "^1.0.1",
     "pokersolver": "^2.1.3",
     "socket.io": "^2.3.0",
     "sqlite": "^4.1.1",
